Atelier 6 fini, ajout du code dans MPartie, ajout de l'appartition des cases grace a addview.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
             android:name=".activites.AParametres"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".activites.APartie"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
