--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,9 @@ android {
     signingConfigs {
         debug {
             keyAlias 'key0'
-            keyPassword 'password'
-            storeFile file('E:/AndroidProjectApp/debug.jks')
-            storePassword 'password'
+            keyPassword 'Cours5b5'
+            storeFile file('/home/mbergeron/AndroidStudioProjects/ateliers_5b5/debug.jks')
+            storePassword 'Cours5b5'
         }
     }
     compileSdkVersion 26
@@ -17,7 +17,6 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
 
     }
     buildTypes {
@@ -32,9 +31,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
-    implementation 'com.firebaseui:firebase-ui-auth:3.3.1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -42,5 +38,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
+    implementation 'com.firebaseui:firebase-ui-auth:3.3.1'
 }
+
 apply plugin: 'com.google.gms.google-services'
